--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,6 @@
+{% load static %}
 
-<h1> Input your text below for wordcount</h1>
+<link rel="stylesheet" href="{% static 'style.css' %}">
 
-<form method="POST" action="counter">
-    {% csrf_token %}
-    <textarea name="text" rows="25" cols=100"> </textarea><br>
-    <input type="submit">
+<h1> Hey welcome to the page </h1>
 
-</form>
