--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,11 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          {% if user.is_authenticated %}
+          <li><a class="getstarted scrollto" href="logout/">Logout</a></li>
+          {% else %}
+          <li><a class="getstarted scrollto" href="login/">Login or Signup</a></li>
+          {% endif %}
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -87,7 +91,12 @@
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
       <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-9 text-center">
-          <h1>One Page Bootstrap Website Template</h1>
+          {% if user.is_authenticated %}
+          <h1>Welcome, {{user.username}} </h1>
+          {% else %}
+          <h1>Welcome! </h1>
+          {% endif %}
+
           <h2>We are team of talented designers</h2>
         </div>
       </div>
@@ -96,12 +105,16 @@
       </div>
 
       <div class="row icon-boxes">
+
         {% for feature in features %}
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
             <h4 class="title"><a href="">{{feature.name}}</a></h4>
             <p class="description">{{feature.details}}</p>
+            {% if feature.name == "Fast" %}
+          <p> this feature says our site is quick</p>
+          {% endif %}
           </div>
         </div>
         {% endfor %}
