downloaded psql database and added it to the project, also created a dynamic url

--- a/templates/counter.html
+++ b/templates/counter.html
@@ -1,1 +1,4 @@
-<h1>Word count:  {{word_count}} </h1>
+{% for post in posts %}
+
+<h1><a href="{% url 'post' post %}"> {{post}} </a></h1>
+{% endfor %}
